test/libsolidity/syntaxTests/storageLayoutSpecifier/abi_decode.sol
contract C layout at abi.decode(abi.encode(42), (uint)) {}
// ----
// TypeError 1505: (21-55): The base slot expression cannot be evaluated during compilation.
